# trs

./: .gitignore  CMakeLists.txt  README.md  Лапка #3 ТРС МКН316 Султанов МФ.odt
labs/: CMakeLists.txt  lab_1.cpp  lab_2.cpp  lab_3.cpp  lab_3_ex4.cpp  matrix_solvers.hpp  ode.hpp
reports/: lab_1.tex
results/lab_3/: ex_4_100.txt  ex_4_1225.txt  ex_4_1600.txt  ex_4_225.txt  ex_4_25.txt  ex_4_400.txt  ex_4_625.txt  ex_4_900.txt
scripts/: lab3.ods  lab_1.ipynb  lab_1_1.ipynb  lab_2.ipynb  lab_3.ipynb
