add_executable(lab_1 lab_1.cpp)
add_executable(lab_2 lab_2.cpp)
add_executable(lab_3 lab_3.cpp)
add_executable(lab_4 lab_4.cpp)

set_property(TARGET lab_1  PROPERTY CXX_STANDARD 23)
set_property(TARGET lab_2  PROPERTY CXX_STANDARD 23)
set_property(TARGET lab_3  PROPERTY CXX_STANDARD 23)
set_property(TARGET lab_4  PROPERTY CXX_STANDARD 23)